# saru-bots

./: .breakpoints  .gitignore  .replit  .swo  .swp  async_multitasking.py  bot_config.json  bot_config_production.json  bots.py  flask_run.py  general_config.json  pyproject.toml  replit.nix  requirements.txt  requirements.txt.old  requirements2.txt  run.py  run.sh  run_replit.sh  teste.py  teste2.py  teste3.py
extensions/basic_commands/: __init__.py
extensions/bots_controller/: __init__.py
extensions/colorful_selection/: __init__.py  basic_selection.py  get_saved_selection.py  models.py  options_manager.py  options_manager_old.py
extensions/colorful_selection/new_selection/: config_translator.py  message_interpreter.py  new_selection.py  register_in_database.py  states_manager.py
extensions/info/: __init__.py
extensions/kanji_sender/: __init__.py  convert.py  cut_image.py  is_cjk.py  kanji_web_scrapping.py
extensions/monopoly/: __init__.py
extensions/numbers/: __init__.py
extensions/random_messages/: __init__.py
extensions/random_messages_enquedita/: __init__.py  models.py
extensions/random_messages_nano_moura/: __init__.py  models.py
extensions/random_messages_tongo/: __init__.py  models.py
extensions/selector/: __init__.py  get_saved_selector.py  helper_message.py  option_manager.py
extensions/silly_games/: __init__.py
extensions/tic_tac_toe_game/: __init__.py
extensions/uno/: __init__.py
flask_app/: __init__.py  config.py  db.sqlite3  flask_script__init__.py
flask_app/controllers/: default.py
flask_app/models/: tables.py
(+8 files in other folders)
