[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["gapigo <<>>"]
description = ""
name = "repl_python3_beta_saru-bots"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Script = "^2.0.6"
SQLAlchemy = "^1.4.32"
alembic = "^1.7.6"
bs4 = "^0.0.1"
discord = "^1.7.3"
python = "^3.8"
python-dotenv = "^0.19.2"
uvloop = "^0.16.0"
selenium = "^4.1.3"
[tool.poetry.dev-dependencies]
